
# Version 3.0.14

* Version 3.0.14 to be in sync with Little Navmap.
* Adapted to MSFS 2024. The program will connect to MSFS 2020 or MSFS 2024 depending on which
  simulator is running. #1198
* Updated translation files and added Chinese language back again.
* Updated Brazilian Portuguese translation by Ricardo.
* Updated Italian translation by Flavio.
* Updated German translation.

===============================================================================

# Version 3.0.7

* Disabled crash detection since it resulted in wrong crashes found when running
  program in system tray on Windows.
* Now always exiting program if command line options `--quit` / `-q` was set, even if no other
  instance was found.
* Translations for French, Italian and Brazilian Portuguese updated. Thanks to Flavio, Patrick and Ricardo!

===============================================================================

# Version 3.0.6

* Added handler to get more detailed stack trace on crashes. Note that this is only enabled on
  Windows 64-bit versions now. A file
  `C:\Users\YOURUSERNAME\AppData\Roaming\ABarthel\little_navmap_stacktrace.txt` with detailed
  location information is created on crash. Send this besides the log file
  `C:\Users\YOURUSERNAME\AppData\Local\Temp\abarthel-little_navmap.log` to me if you see a crash
  of *Little Navconnect*.
* Removed `Little Navconnect is already running` dialog. Starting the program with an already
  running instance simply activates the program and shows the main window now.
* New command line option `-q` / `--quit` to terminate an already running instance.
* Fixed issue where program could be started more than once.
* Updated user manual with command line options.

===============================================================================

# Version 3.0.5

* Updated translations for Brazilian Portuguese, French, German and Italian.
* Removed Dutch, Chinese and Spanish translations since these have not been updated for a long time